# ifc

./: .gitignore  01_eda_finalpart.ipynb  03_rule_spectral_pipeline.ipynb  03_rule_spectral_pipeline_v2.ipynb  03_rule_spectral_pipeline_v3.ipynb  03_rule_spectral_pipeline_v4.ipynb  master_trajectory_sankey.png.meta.json  pyproject.toml  starter_template.ipynb  survivorship_trajectory_sankey.png.meta.json
documentations/: EDA_findings.md  EDA_roadmap.md  slides.md
documentations/challenge_description/: README.md  challenge_description.md  data_dictionary.md
notebooks/: 01_eda.ipynb  01_eda_finalpart.ipynb  02_training.ipynb  class_d_significance.png.meta.json  notebooks.ipynb  survivorship_bias.png.meta.json
src/ifc/: config.py
tests/: tests_datasets.py
