[project]
name = "ifc"
version = "0.1.0"
description = "Task 2 Challenge - Financial Health Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrowspace>=0.25.14",
    "imbalanced-learn>=0.12.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
    "kaleido>=1.2.0",
    "lifelines>=0.30.3",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.0",
    "nbdime>=4.0.4",
    "networkx>=3.6.1",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "shap>=0.45.0",
    "tabulate>=0.10.0",
    "umap-learn>=0.5.12",
    "xgboost>=2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
